fixing more spacing on the text blocks

--- a/components/block_collection/stylesheets/block_collection.styl
+++ b/components/block_collection/stylesheets/block_collection.styl
@@ -130,10 +130,13 @@ privacy-color('.list__block--channel--', color)
   height auto
   max-height block_width
 
+.grid__block--text .valign-inner
+  vertical-align top
+
 .grid__block__content__text
   @extend .serif-text
   height 100%
-  padding 0 1.2em
+  padding 1em 1.2em 0 1.2em
   font-size 1.04em
 
   a
@@ -141,9 +144,6 @@ privacy-color('.list__block--channel--', color)
   p
     margin 0
     margin-bottom 1.04em
-
-  .valign-inner
-    vertical-align top
 
 .button--delete-block
   float right
